k8s/minikube/jobber-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobber-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: jobber-gateway
  ports:
    - name: gateway
      port: 4000
      targetPort: 4000
      protocol: TCP
